--- a/Quarterback/Quarterback.csproj
+++ b/Quarterback/Quarterback.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
