Call The Octopus Api And Retrieve Data
Calling the octopus api using a helper library whose elements get
instantiated using depedency injection

--- a/Quarterback/appsettings.json
+++ b/Quarterback/appsettings.json
@@ -1,3 +1,16 @@
 {
-  "LoopTimes": 69
+  "OctopusApi": {
+    "BaseURL": "https://api.octopus.energy",
+    "ApiKey": "",
+    "Electricity": {
+      "url": "/v1/electricity-meter-points/{mpan}/meters/{serial_number}/consumption/",
+      "mpan": "",
+      "serial_number": ""
+    },
+    "Gas": {
+      "url": "/v1/gas-meter-points/{mprn}/meters/{serial_number}/consumption/",
+      "mpan": "",
+      "serial_number": ""
+    }
+  }
 }
