Move Configuration Out Of Api Helpers
Moved the call to config out of the api helpers, also added boilerplate
for the connection strings and for logging

--- a/Quarterback/appsettings.json
+++ b/Quarterback/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "octopus_database": ""
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning"
+    }
+  },
   "OctopusApi": {
     "BaseURL": "https://api.octopus.energy",
     "ApiKey": "",
