Separated Octopus Helpers To Reflect Endpoints
Separated the two octopus endpoints into two separate helpers to reflect
the endpoints each targets

--- a/Quarterback/appsettings.json
+++ b/Quarterback/appsettings.json
@@ -17,9 +17,7 @@
       "serial_number": ""
     },
     "Gas": {
-      "url": "/v1/gas-meter-points/{mprn}/meters/{serial_number}/consumption/",
-      "mpan": "",
-      "serial_number": ""
+      "url": "/v1/gas-meter-points/{mpan}/meters/{serial_number}/consumption/",
     }
   }
 }
