--- a/Quarterback/appsettings.json
+++ b/Quarterback/appsettings.json
@@ -18,6 +18,8 @@
     },
     "Gas": {
       "url": "/v1/gas-meter-points/{mpan}/meters/{serial_number}/consumption/",
+      "mpan": "",
+      "serial_number": ""
     }
   }
 }
