Adedd The Database To The Project
Added my favourite template to manage and organize the tables, users,
permissions, and stored procedures. This includes a python script that
aggregates all relevant files of the project and builds a migrations.sql
file that calls all the other files in the project to build the desired
database.

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# File created by the Database Builder python script
+migrations.sql
