--- a/Quarterback/Quarterback.csproj
+++ b/Quarterback/Quarterback.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DatabaseData.Library\DatabaseData.Library.csproj" />
     <ProjectReference Include="..\Octo-Tweet.Library\Octo-Tweet.Library.csproj" />
   </ItemGroup>
 
