Add Project That Is Responsible Of CRUD Operations
Added a project that handles CRUD operations by calling stored
procedures, at the moment this is only saving to the database. Also
extracted their interfaces

--- a/Quarterback/Quarterback.csproj
+++ b/Quarterback/Quarterback.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DatabaseData.Library\DatabaseData.Library.csproj" />
+    <ProjectReference Include="..\Octo-Tweet.Data.Libary\Octo-Tweet.Data.Libary.csproj" />
     <ProjectReference Include="..\Octo-Tweet.Library\Octo-Tweet.Library.csproj" />
   </ItemGroup>
 
