Created Python Folder To Hold The Python Scripts
Created a python folder to hold the python scripts and also added venv
folders to the .gitignore, also added the requirements.txt file
https://www.youtube.com/watch?v=APOPm01BVrk Good video if you ever need
to look back at the basics

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,12 @@ MigrationBackup/
 
 # File created by the Database Builder python script
 migrations.sql
+
+# Python Virtual Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
