--- a/Python/appsettings.json
+++ b/Python/appsettings.json
@@ -4,5 +4,11 @@
         "consumer_secret": "",
         "access_token": "",
         "token_secret": ""
+    },
+    "Charts": {
+        "electricity_color_line": "#e9f50a",
+        "electricity_color_fill": "#eff853",
+        "gas_color_line": "#368ee0",
+        "gas_color_fill": "#72afe9"
     }
 }
