--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -4,10 +4,11 @@ cycler==0.10.0
 idna==2.10
 kiwisolver==1.2.0
 matplotlib==3.3.2
-mysqlclient==2.0.1
+mysql-connector-python==8.0.22
 numpy==1.19.2
 oauthlib==3.1.0
 Pillow==8.0.1
+protobuf==3.14.0
 pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.1
