Query Database And Produce Charts
Query the database using the MySql connector and proceduraly create
charts for all the days in the database.
Very important in this commit is the function dailyChart, meant for
creating the daily chart when called, this is yet to be placed in a
file with a sensible name.

--- a/Python/appsettings.json
+++ b/Python/appsettings.json
@@ -10,5 +10,11 @@
         "electricity_color_fill": "#eff853",
         "gas_color_line": "#368ee0",
         "gas_color_fill": "#72afe9"
+    },
+    "MySql": {
+        "user_name": "",
+        "password": "",
+        "host": "",
+        "database_name": ""
     }
 }
