Added New Command Line Argument

--- a/Quarterback/Properties/launchSettings.json
+++ b/Quarterback/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Quarterback": {
       "commandName": "Project",
-      "commandLineArgs": "-a"
+      "commandLineArgs": "--all"
     }
   }
 }
