Write Messages Of Records Updated
Write to the terminal the ammount of records updated when the program is
is run and propperly handle and empty args array

--- a/Quarterback/Properties/launchSettings.json
+++ b/Quarterback/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Quarterback": {
-      "commandName": "Project",
-      "commandLineArgs": "--all"
+      "commandName": "Project"
     }
   }
 }
