Automaticaly Populate Chart Tracker Table
When the specified flag is given the program populates the chart tracker
table with the appropiate information so that the python program can
start generating charts from the very beguining of when data is
available

--- a/Quarterback/Properties/launchSettings.json
+++ b/Quarterback/Properties/launchSettings.json
@@ -1,7 +1,13 @@
 {
   "profiles": {
     "Quarterback": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--chart-tracker-fill"
+    },
+    "WSL 2": {
+      "commandName": "Project",
+      "commandLineArgs": "--all",
+      "distributionName": ""
     }
   }
 }
