--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["--day", "--week", "--month", "--year", "-d", "-w", "-m", "-y"]
+            "args": ["2011-11-04 05:05:23", "2014-12-01 16:05:23"]
         }
     ]
 }
