--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "program": "${workspaceFolder}/Python/Striker.py",
             "console": "integratedTerminal",
             //"args": ["charts", "2011-11-04 05:05:23", "2014-12-01 16:05:23", "Daily", "Weekly", "Monthly", "Quarterly", "Yearly"]
-            // "args": ["generate"]
-            "args": ["generate", "--folders"]
+            "args": ["generate"]
+            // "args": ["generate", "--folders"]
             // "args": ["generate", "--tweet"]
         }
     ]
