Made Delay Configurable From appsettings.json

--- a/Python/appsettings.json
+++ b/Python/appsettings.json
@@ -1,9 +1,12 @@
 {
-    "TwitterApi": {
-        "consumer_key": "",
-        "consumer_secret": "",
-        "access_token": "",
-        "token_secret": ""
+    "Twitter":{
+        "TwitterApi": {
+            "consumer_key": "",
+            "consumer_secret": "",
+            "access_token": "",
+            "token_secret": ""
+        },
+        "delay": 120
     },
     "Charts": {
         "electricity_color_line": "#e9f50a",
