Updated How To Get Secrets From Configuration

--- a/Python/appsettings.json
+++ b/Python/appsettings.json
@@ -15,9 +15,9 @@
         "gas_color_fill": "#72afe9"
     },
     "MySql": {
-        "user_name": "",
+        "user": "",
         "password": "",
         "host": "",
-        "database_name": ""
+        "database": ""
     }
 }
