Lose Guidelines For Deployment
Added some loose instructions for the deployment on a linux server, also
added a shell script for running c# and python programs in succession

--- a/Quarterback/Properties/launchSettings.json
+++ b/Quarterback/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Quarterback": {
-      "commandName": "Project",
-      "commandLineArgs": "--chart-tracker-fill"
+      "commandName": "Project"
     },
     "WSL 2": {
       "commandName": "Project",
